[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/LiberationSans/LiberationSansRegular.tres" type="DynamicFontData" id=1]
[ext_resource path="res://dialogue/DialogueBox.tres" type="StyleBox" id=2]
[ext_resource path="res://dialogue/DialogueBox.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[node name="DialogueBox" type="Control"]
margin_top = 368.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 56.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="NamePanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Character Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 56.0
margin_right = 1016.0
margin_bottom = 224.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="TextPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1000.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "fdasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLabel" type="Label" parent="TextPanel"]
margin_left = 944.0
margin_top = 136.0
margin_right = 1000.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 4 )
text = "Next >"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_DialogueBox_visibility_changed"]
[connection signal="gui_input" from="NamePanel" to="." method="_on_DialogueBox_gui_input"]
[connection signal="gui_input" from="TextPanel" to="." method="_on_DialogueBox_gui_input"]
